core#3364 remove CPRef milestone view fixes